--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,11 @@
+@import "1-utils/utils.css";
 @import "2-base/base.css";
+@import "3-layout/layout.css";
 @import "4-modules/login.css";
+@import "5-state/state.css";
+
+/**
+ * Liitä uudet css-tiedostot ko. kansion yleiseen import-tiedostoon esim.
+ * @import "tiedosto.css";
+ * jokaisessa kansiossa on niiden nimeä vastaava yleinen import-tiedosto
+ */
